Navbar collapsed styles fix

--- a/src/main/resources/bak_styles/projectforge.less
+++ b/src/main/resources/bak_styles/projectforge.less
@@ -184,20 +184,20 @@ ul.nav-pills > .active > a:hover {
 		padding-right: 5px;
 		padding-bottom: 5px;
 	}
-	.nav-collapse .dropdown-menu {
+	.navbar-collapse .dropdown-menu {
 		margin:0;
 		height:0;
 	}
-	.nav-collapse li:hover .dropdown-menu {
+	.navbar-collapse li:hover .dropdown-menu {
 		/*height:auto;*/
 		height:0;
 		display:none;
 		visibility:hidden;
 	}
-	.nav-collapse li.mm_open:hover > .dropdown-menu,
-	.nav-collapse li.mm_open > .dropdown-menu,
-	.nav-collapse li.open:hover > .dropdown-menu,
-	.nav-collapse li.open > .dropdown-menu {
+	.navbar-collapse li.mm_open:hover > .dropdown-menu,
+	.navbar-collapse li.mm_open > .dropdown-menu,
+	.navbar-collapse li.open:hover > .dropdown-menu,
+	.navbar-collapse li.open > .dropdown-menu {
 		height:auto;
 		display:block;
 		visibility:visible;
@@ -207,13 +207,13 @@ ul.nav-pills > .active > a:hover {
 		display: block;
 		visibility: visible;
 	}
-	.nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
+	.navbar-collapse .nav > li > a, .navbar-collapse .dropdown-menu a {
 		padding: 2px 15px;
 	}
-	.nav-collapse ul.dropdown-menu > .dropdown-submenu > a {
+	.navbar-collapse ul.dropdown-menu > .dropdown-submenu > a {
 		padding: 2px 15px;
 	} 
-	.nav-collapse ul.dropdown-menu ul.dropdown-menu a {
+	.navbar-collapse ul.dropdown-menu ul.dropdown-menu a {
 		padding: 2px 25px;
 	}
   .navbar .nav.pf_menueconfig,
