--- a/src/main/resources/styles/projectforge.less
+++ b/src/main/resources/styles/projectforge.less
@@ -184,20 +184,20 @@ ul.nav-pills > .active > a:hover {
 		padding-right: 5px;
 		padding-bottom: 5px;
 	}
-	.nav-collapse .dropdown-menu {
+	.navbar-collapse .dropdown-menu {
 		margin:0;
 		height:0;
 	}
-	.nav-collapse li:hover .dropdown-menu {
+	.navbar-collapse li:hover .dropdown-menu {
 		/*height:auto;*/
 		height:0;
 		display:none;
 		visibility:hidden;
 	}
-	.nav-collapse li.mm_open:hover > .dropdown-menu,
-	.nav-collapse li.mm_open > .dropdown-menu,
-	.nav-collapse li.open:hover > .dropdown-menu,
-	.nav-collapse li.open > .dropdown-menu {
+	.navbar-collapse li.mm_open:hover > .dropdown-menu,
+	.navbar-collapse li.mm_open > .dropdown-menu,
+	.navbar-collapse li.open:hover > .dropdown-menu,
+	.navbar-collapse li.open > .dropdown-menu {
 		height:auto;
 		display:block;
 		visibility:visible;
@@ -207,19 +207,123 @@ ul.nav-pills > .active > a:hover {
 		display: block;
 		visibility: visible;
 	}
-	.nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
+	.navbar-collapse .nav > li > a, .navbar-collapse .dropdown-menu a {
 		padding: 2px 15px;
 	}
-	.nav-collapse ul.dropdown-menu > .dropdown-submenu > a {
+	.navbar-collapse ul.dropdown-menu > .dropdown-submenu > a {
 		padding: 2px 15px;
 	}
-	.nav-collapse ul.dropdown-menu ul.dropdown-menu a {
+	.navbar-collapse ul.dropdown-menu ul.dropdown-menu a {
 		padding: 2px 25px;
 	}
   .navbar .nav.pf_menueconfig,
   #pf_newentry{
       display:none;
     }
+
+// COLLAPSIBLE NAVBAR
+// ------------------
+// Nav collapse clears brand
+  .navbar-collapse {
+    clear: both;
+  }
+// Block-level the nav
+  .navbar-collapse .nav {
+    float: none;
+    // margin: 0 0 (@baseLineHeight / 2);
+  }
+  .navbar-collapse .nav > li {
+    float: none;
+  }
+  .navbar-collapse .nav > li > a {
+    margin-bottom: 2px;
+  }
+  .navbar-collapse .nav > .divider-vertical {
+    display: none;
+  }
+  .navbar-collapse .nav .nav-header {
+    color: @navbarText;
+    text-shadow: none;
+  }
+// Nav and dropdown links in navbar
+  .navbar-collapse .nav > li > a,
+  .navbar-collapse .dropdown-menu a {
+    padding: 9px 15px;
+    font-weight: bold;
+    // color: @navbarLinkColor;
+  }
+// Buttons
+  .navbar-collapse .btn {
+    padding: 4px 10px 4px;
+    font-weight: normal;
+  }
+  .navbar-collapse .dropdown-menu li + li a {
+    margin-bottom: 2px;
+  }
+// Buttons in the navbar
+  .navbar-collapse.in .btn-group {
+    margin-top: 5px;
+    padding: 0;
+  }
+// Dropdowns in the navbar
+  .navbar-collapse .dropdown-menu {
+    position: static;
+    top: auto;
+    left: auto;
+    float: none;
+    display: none;
+    max-width: none;
+    margin: 0 15px;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    .box-shadow(none);
+  }
+  .navbar-collapse .open > .dropdown-menu {
+    display: block;
+  }
+
+  .navbar-collapse .dropdown-menu:before,
+  .navbar-collapse .dropdown-menu:after {
+    display: none;
+  }
+  .navbar-collapse .dropdown-menu .divider {
+    display: none;
+  }
+  .navbar-collapse .nav > li > .dropdown-menu {
+    &:before,
+    &:after {
+      display: none;
+    }
+  }
+// Forms in navbar
+  .navbar-collapse .navbar-form,
+  .navbar-collapse .navbar-search {
+    float: none;
+    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1)");
+  }
+// Pull right (secondary) nav content
+  .navbar .navbar-collapse .nav.pull-right {
+    float: none;
+    margin-left: 0;
+  }
+// Hide everything in the navbar save .brand and toggle button */
+  .navbar-collapse,
+  .navbar-collapse.collapse {
+    overflow: hidden;
+    height: 0;
+  }
+// Navbar button
+  .navbar .btn-navbar {
+    display: block;
+  }
+
+// STATIC NAVBAR
+// -------------
+  .navbar-static .navbar-inner {
+    padding-left:  10px;
+    padding-right: 10px;
+  }
 }
 // Bootstrap3 Update
 
